Made style.css Insight Tools focussed

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
-Theme Name: Libretto
-Theme URI: https://wordpress.com/themes/libretto/
-Description: Libretto is a responsive one-column theme with classic styling and careful typographic details. It’s ideally suited to showcasing longform writing interspersed with beautiful images and inspiring quotes.
-Version: 1.0.8
-Author: Automattic
-Author URI: http://wordpress.com/themes/
+Theme Name: Insight Tools Test Theme
+Theme URI: https://github.com/SnickerKick/itooltesttheme
+Description: Test theme
+Version: 0.1
+Author: Insight Tools
+Author URI: https://insight-tools.com
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: libretto
-Tags: blog, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-image-header, featured-images, flexible-header, microformats, one-column, photography, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready
+Text Domain: insight-tools
+Tags: 
 */
 
 /*--------------------------------------------------------------
